# Visual-Odometry-Using-SSM

./: .gitattributes  .gitignore  README.md
mamba_glue/: README.md  pyproject.toml  requirements.txt
mamba_glue/mambaglue.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mambaglue/: requirements.txt  test_mambaglue.py
mambaglue/mambaglue.egg-info/: requires.txt
memory/: MEMORY.md  project_state.md  ssm_research.md
models/: checkpoint_best.tar
results/: latency_log.csv  predicted_trajectory.txt
vo_ros2_ws/: .gitignore  requirements.txt
vo_ros2_ws/scripts/: benchmark_inference.py  evaluate_ate.py  run_offline.py  tune_hyperparams.py  visualize_trajectory.py
vo_ros2_ws/src/data_collector/: package.xml  setup.py
vo_ros2_ws/src/data_collector/data_collector/: gt_pose_saver_node.py  image_saver_node.py
vo_ros2_ws/src/data_collector/launch/: collect.launch.py
vo_ros2_ws/src/robot_description/: CMakeLists.txt  package.xml
vo_ros2_ws/src/robot_description/launch/: spawn_robot.launch.py
vo_ros2_ws/src/robot_description/urdf/: diffbot_camera.urdf.xacro
vo_ros2_ws/src/robot_description/worlds/: small_house.world  structured_env.world
vo_ros2_ws/src/ssm_vo/: package.xml  setup.py
vo_ros2_ws/src/ssm_vo/launch/: collect.launch.py  vo.launch.py
vo_ros2_ws/src/ssm_vo/ssm_vo/: inference.py  pose_estimator.py  profiler.py  vo_node.py
